src/main/java/parser/minijava/parser/MJParser.java
/* MJParser.java */
/* Generated By:JavaCC: Do not edit this line. MJParser.java */
package parser.minijava.parser;

import parser.minijava.ast.AllocationExpression;
import parser.minijava.ast.AndExpression;
import parser.minijava.ast.ArrayAllocationExpression;
import parser.minijava.ast.ArrayAssignmentStatement;
import parser.minijava.ast.ArrayLength;
import parser.minijava.ast.ArrayLookup;
import parser.minijava.ast.ArrayType;
import parser.minijava.ast.AssignmentStatement;
import parser.minijava.ast.Block;
import parser.minijava.ast.BooleanType;
import parser.minijava.ast.BranchStatement;
import parser.minijava.ast.ClassDeclaration;
import parser.minijava.ast.ClassExtendsDeclaration;
import parser.minijava.ast.Comment;
import parser.minijava.ast.CompareExpression;
import parser.minijava.ast.Expression;
import parser.minijava.ast.ExpressionList;
import parser.minijava.ast.ExpressionRest;
import parser.minijava.ast.FalseLiteral;
import parser.minijava.ast.FormalParameter;
import parser.minijava.ast.FormalParameterList;
import parser.minijava.ast.FormalParameterRest;
import parser.minijava.ast.Goal;
import parser.minijava.ast.Identifier;
import parser.minijava.ast.IntegerLiteral;
import parser.minijava.ast.IntegerType;
import parser.minijava.ast.MainClass;
import parser.minijava.ast.MessageSend;
import parser.minijava.ast.MethodDeclarationUnordered;
import parser.minijava.ast.MinusExpression;
import parser.minijava.ast.NodeChoice;
import parser.minijava.ast.NodeListOptional;
import parser.minijava.ast.NodeOptional;
import parser.minijava.ast.NodeSequence;
import parser.minijava.ast.NodeToken;
import parser.minijava.ast.NotExpression;
import parser.minijava.ast.ParanthesisExpression;
import parser.minijava.ast.PlusExpression;
import parser.minijava.ast.PrimaryExpression;
import parser.minijava.ast.PrintStatement;
import parser.minijava.ast.Statement;
import parser.minijava.ast.ThisExpression;
import parser.minijava.ast.TimesExpression;
import parser.minijava.ast.TrueLiteral;
import parser.minijava.ast.Type;
import parser.minijava.ast.TypeDeclarationUnordered;
import parser.minijava.ast.VarDeclarationUnordered;
import parser.minijava.ast.WhileStatement;


public class MJParser implements MJParserConstants {

    static private int[] jj_la1_0;
    static private int[] jj_la1_1;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
    }

    final private int[] jj_la1 = new int[23];
    final private JJCalls[] jj_2_rtns = new JJCalls[14];
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    public MJParserTokenManager token_source;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    JavaCharStream jj_input_stream;
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    private int jj_gen;
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;
    private int trace_indent = 0;
    private boolean trace_enabled = true;

    /**
     * Constructor with InputStream.
     */
    public MJParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public MJParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new JavaCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new MJParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public MJParser(java.io.Reader stream) {
        jj_input_stream = new JavaCharStream(stream, 1, 1);
        token_source = new MJParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public MJParser(MJParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{0x40000000, 0x40000000, 0x1c0, 0x20000000, 0x0, 0x1c0, 0x20000000, 0x0, 0x20000000, 0x1c0, 0x2000, 0x0, 0x20000000, 0x2000, 0x0, 0x2000, 0x0, 0x10000200, 0x10000200, 0x0, 0x0, 0x10000200, 0x1c0,};
    }

    private static void jj_la1_init_1() {
        jj_la1_1 = new int[]{0x0, 0x0, 0x0, 0x100040, 0x400, 0x0, 0x100040, 0x400, 0x100040, 0x0, 0x110033, 0x40000, 0x100040, 0x0, 0x10033, 0x110033, 0x13, 0x18c208, 0x18c208, 0x40000, 0x18c008, 0x200, 0x0,};
    }

    final public Goal Goal() throws ParseException {
        trace_call("Goal");
        try {
            MainClass n0;
            NodeListOptional n1 = new NodeListOptional();
            TypeDeclarationUnordered n2;
            NodeToken n3;
            Token n4;
            n0 = MainClass();
            label_1:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case CLASS: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[0] = jj_gen;
                        break label_1;
                }
                n2 = TypeDeclarationUnordered();
                n1.addNode(n2);
            }
            n1.nodes.trimToSize();
            n4 = jj_consume_token(0);
            n4.beginColumn++;
            n4.endColumn++;
            n3 = JTBToolkit.makeNodeToken(n4);
            {
                if ("" != null) return new Goal(n0, n1, n3);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("Goal");
        }
    }

    final public MainClass MainClass() throws ParseException {
        trace_call("MainClass");
        try {
            NodeToken n0;
            Token n1;
            Identifier n2;
            NodeToken n3;
            Token n4;
            NodeToken n5;
            Token n6;
            NodeToken n7;
            Token n8;
            NodeToken n9;
            Token n10;
            NodeToken n11;
            Token n12;
            NodeToken n13;
            Token n14;
            NodeToken n15;
            Token n16;
            NodeToken n17;
            Token n18;
            NodeToken n19;
            Token n20;
            Identifier n21;
            NodeToken n22;
            Token n23;
            NodeToken n24;
            Token n25;
            PrintStatement n26;
            NodeToken n27;
            Token n28;
            NodeToken n29;
            Token n30;
            n1 = jj_consume_token(CLASS);
            n0 = JTBToolkit.makeNodeToken(n1);
            n2 = Identifier();
            n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
            n6 = jj_consume_token(PUBLIC);
            n5 = JTBToolkit.makeNodeToken(n6);
            n8 = jj_consume_token(STATIC);
            n7 = JTBToolkit.makeNodeToken(n8);
            n10 = jj_consume_token(VOID);
            n9 = JTBToolkit.makeNodeToken(n10);
            n12 = jj_consume_token(MAIN);
            n11 = JTBToolkit.makeNodeToken(n12);
            n14 = jj_consume_token(LPAREN);
            n13 = JTBToolkit.makeNodeToken(n14);
            n16 = jj_consume_token(STRING);
            n15 = JTBToolkit.makeNodeToken(n16);
            n18 = jj_consume_token(LSQPAREN);
            n17 = JTBToolkit.makeNodeToken(n18);
            n20 = jj_consume_token(RSQPAREN);
            n19 = JTBToolkit.makeNodeToken(n20);
            n21 = Identifier();
            n23 = jj_consume_token(RPAREN);
            n22 = JTBToolkit.makeNodeToken(n23);
            n25 = jj_consume_token(LBRACE);
            n24 = JTBToolkit.makeNodeToken(n25);
            n26 = PrintStatement();
            n28 = jj_consume_token(RBRACE);
            n27 = JTBToolkit.makeNodeToken(n28);
            n30 = jj_consume_token(RBRACE);
            n29 = JTBToolkit.makeNodeToken(n30);
            {
                if ("" != null)
                    return new MainClass(n0, n2, n3, n5, n7, n9, n11, n13, n15, n17, n19, n21, n22, n24, n26, n27, n29);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("MainClass");
        }
    }

    final public TypeDeclarationUnordered TypeDeclarationUnordered() throws ParseException {
        trace_call("TypeDeclarationUnordered");
        try {
            NodeChoice n0;
            ClassDeclaration n1;
            ClassExtendsDeclaration n2;
            if (jj_2_1(3)) {
                n1 = ClassDeclaration();
                n0 = new NodeChoice(n1, 0);
            } else {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case CLASS: {
                        n2 = ClassExtendsDeclaration();
                        n0 = new NodeChoice(n2, 1);
                        break;
                    }
                    default:
                        jj_la1[1] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
            {
                if ("" != null) return new TypeDeclarationUnordered(n0);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("TypeDeclarationUnordered");
        }
    }

    final public ClassDeclaration ClassDeclaration() throws ParseException {
        trace_call("ClassDeclaration");
        try {
            NodeToken n0;
            Token n1;
            Identifier n2;
            NodeToken n3;
            Token n4;
            NodeListOptional n5 = new NodeListOptional();
            Comment n6;
            NodeListOptional n7 = new NodeListOptional();
            VarDeclarationUnordered n8;
            NodeListOptional n9 = new NodeListOptional();
            MethodDeclarationUnordered n10;
            NodeToken n11;
            Token n12;
            n1 = jj_consume_token(CLASS);
            n0 = JTBToolkit.makeNodeToken(n1);
            n2 = Identifier();
            n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
            label_2:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case SINGLE_LINE_COMMENT:
                    case FORMAL_COMMENT:
                    case MULTI_LINE_COMMENT: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[2] = jj_gen;
                        break label_2;
                }
                n6 = Comment();
                n5.addNode(n6);
            }
            n5.nodes.trimToSize();
            label_3:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case BOOLEAN:
                    case INTEGER:
                    case IDENTIFIER: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[3] = jj_gen;
                        break label_3;
                }
                n8 = VarDeclarationUnordered();
                n7.addNode(n8);
            }
            n7.nodes.trimToSize();
            label_4:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case PUBLIC: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[4] = jj_gen;
                        break label_4;
                }
                n10 = MethodDeclarationUnordered();
                n9.addNode(n10);
            }
            n9.nodes.trimToSize();
            n12 = jj_consume_token(RBRACE);
            n11 = JTBToolkit.makeNodeToken(n12);
            {
                if ("" != null) return new ClassDeclaration(n0, n2, n3, n5, n7, n9, n11);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("ClassDeclaration");
        }
    }

    final public ClassExtendsDeclaration ClassExtendsDeclaration() throws ParseException {
        trace_call("ClassExtendsDeclaration");
        try {
            NodeToken n0;
            Token n1;
            Identifier n2;
            NodeToken n3;
            Token n4;
            Identifier n5;
            NodeToken n6;
            Token n7;
            NodeListOptional n8 = new NodeListOptional();
            Comment n9;
            NodeListOptional n10 = new NodeListOptional();
            VarDeclarationUnordered n11;
            NodeListOptional n12 = new NodeListOptional();
            MethodDeclarationUnordered n13;
            NodeToken n14;
            Token n15;
            n1 = jj_consume_token(CLASS);
            n0 = JTBToolkit.makeNodeToken(n1);
            n2 = Identifier();
            n4 = jj_consume_token(EXTENDS);
            n3 = JTBToolkit.makeNodeToken(n4);
            n5 = Identifier();
            n7 = jj_consume_token(LBRACE);
            n6 = JTBToolkit.makeNodeToken(n7);
            label_5:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case SINGLE_LINE_COMMENT:
                    case FORMAL_COMMENT:
                    case MULTI_LINE_COMMENT: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[5] = jj_gen;
                        break label_5;
                }
                n9 = Comment();
                n8.addNode(n9);
            }
            n8.nodes.trimToSize();
            label_6:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case BOOLEAN:
                    case INTEGER:
                    case IDENTIFIER: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[6] = jj_gen;
                        break label_6;
                }
                n11 = VarDeclarationUnordered();
                n10.addNode(n11);
            }
            n10.nodes.trimToSize();
            label_7:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case PUBLIC: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[7] = jj_gen;
                        break label_7;
                }
                n13 = MethodDeclarationUnordered();
                n12.addNode(n13);
            }
            n12.nodes.trimToSize();
            n15 = jj_consume_token(RBRACE);
            n14 = JTBToolkit.makeNodeToken(n15);
            {
                if ("" != null)
                    return new ClassExtendsDeclaration(n0, n2, n3, n5, n6, n8, n10, n12, n14);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("ClassExtendsDeclaration");
        }
    }

    final public VarDeclarationUnordered VarDeclarationUnordered() throws ParseException {
        trace_call("VarDeclarationUnordered");
        try {
            Type n0;
            Identifier n1;
            NodeToken n2;
            Token n3;
            n0 = Type();
            n1 = Identifier();
            n3 = jj_consume_token(SEMICOLON);
            n2 = JTBToolkit.makeNodeToken(n3);
            {
                if ("" != null) return new VarDeclarationUnordered(n0, n1, n2);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("VarDeclarationUnordered");
        }
    }

    final public MethodDeclarationUnordered MethodDeclarationUnordered() throws ParseException {
        trace_call("MethodDeclarationUnordered");
        try {
            NodeToken n0;
            Token n1;
            Type n2;
            Identifier n3;
            NodeToken n4;
            Token n5;
            NodeOptional n6 = new NodeOptional();
            FormalParameterList n7;
            NodeToken n8;
            Token n9;
            NodeToken n10;
            Token n11;
            NodeListOptional n12 = new NodeListOptional();
            Comment n13;
            NodeListOptional n14 = new NodeListOptional();
            VarDeclarationUnordered n15;
            NodeListOptional n16 = new NodeListOptional();
            Statement n17;
            NodeToken n18;
            Token n19;
            Expression n20;
            NodeToken n21;
            Token n22;
            NodeToken n23;
            Token n24;
            n1 = jj_consume_token(PUBLIC);
            n0 = JTBToolkit.makeNodeToken(n1);
            n2 = Type();
            n3 = Identifier();
            n5 = jj_consume_token(LPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case BOOLEAN:
                case INTEGER:
                case IDENTIFIER: {
                    n7 = FormalParameterList();
                    n6.addNode(n7);
                    break;
                }
                default:
                    jj_la1[8] = jj_gen;
                    ;
            }
            n9 = jj_consume_token(RPAREN);
            n8 = JTBToolkit.makeNodeToken(n9);
            n11 = jj_consume_token(LBRACE);
            n10 = JTBToolkit.makeNodeToken(n11);
            label_8:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case SINGLE_LINE_COMMENT:
                    case FORMAL_COMMENT:
                    case MULTI_LINE_COMMENT: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[9] = jj_gen;
                        break label_8;
                }
                n13 = Comment();
                n12.addNode(n13);
            }
            n12.nodes.trimToSize();
            label_9:
            while (true) {
                if (jj_2_2(2)) {
                    ;
                } else {
                    break label_9;
                }
                n15 = VarDeclarationUnordered();
                n14.addNode(n15);
            }
            n14.nodes.trimToSize();
            label_10:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case LBRACE:
                    case ELSE:
                    case ELSE_IF:
                    case IF:
                    case WHILE:
                    case PRINT:
                    case IDENTIFIER: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[10] = jj_gen;
                        break label_10;
                }
                n17 = Statement();
                n16.addNode(n17);
            }
            n16.nodes.trimToSize();
            n19 = jj_consume_token(RETURN);
            n18 = JTBToolkit.makeNodeToken(n19);
            n20 = Expression();
            n22 = jj_consume_token(SEMICOLON);
            n21 = JTBToolkit.makeNodeToken(n22);
            n24 = jj_consume_token(RBRACE);
            n23 = JTBToolkit.makeNodeToken(n24);
            {
                if ("" != null)
                    return new MethodDeclarationUnordered(n0, n2, n3, n4, n6, n8, n10, n12, n14, n16, n18, n20, n21, n23);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("MethodDeclarationUnordered");
        }
    }

    final public FormalParameterList FormalParameterList() throws ParseException {
        trace_call("FormalParameterList");
        try {
            FormalParameter n0;
            NodeListOptional n1 = new NodeListOptional();
            FormalParameterRest n2;
            n0 = FormalParameter();
            label_11:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case COMMA: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[11] = jj_gen;
                        break label_11;
                }
                n2 = FormalParameterRest();
                n1.addNode(n2);
            }
            n1.nodes.trimToSize();
            {
                if ("" != null) return new FormalParameterList(n0, n1);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("FormalParameterList");
        }
    }

    final public FormalParameter FormalParameter() throws ParseException {
        trace_call("FormalParameter");
        try {
            Type n0;
            Identifier n1;
            n0 = Type();
            n1 = Identifier();
            {
                if ("" != null) return new FormalParameter(n0, n1);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("FormalParameter");
        }
    }

    final public FormalParameterRest FormalParameterRest() throws ParseException {
        trace_call("FormalParameterRest");
        try {
            NodeToken n0;
            Token n1;
            FormalParameter n2;
            n1 = jj_consume_token(COMMA);
            n0 = JTBToolkit.makeNodeToken(n1);
            n2 = FormalParameter();
            {
                if ("" != null) return new FormalParameterRest(n0, n2);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("FormalParameterRest");
        }
    }

    final public Type Type() throws ParseException {
        trace_call("Type");
        try {
            NodeChoice n0;
            ArrayType n1;
            BooleanType n2;
            IntegerType n3;
            Identifier n4;
            if (jj_2_3(3)) {
                n1 = ArrayType();
                n0 = new NodeChoice(n1, 0);
            } else {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                    case BOOLEAN: {
                        n2 = BooleanType();
                        n0 = new NodeChoice(n2, 1);
                        break;
                    }
                    case INTEGER: {
                        n3 = IntegerType();
                        n0 = new NodeChoice(n3, 2);
                        break;
                    }
                    case IDENTIFIER: {
                        n4 = Identifier();
                        n0 = new NodeChoice(n4, 3);
                        break;
                    }
                    default:
                        jj_la1[12] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
            }
            {
                if ("" != null) return new Type(n0);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("Type");
        }
    }

    final public ArrayType ArrayType() throws ParseException {
        trace_call("ArrayType");
        try {
            NodeToken n0;
            Token n1;
            NodeToken n2;
            Token n3;
            NodeToken n4;
            Token n5;
            n1 = jj_consume_token(INTEGER);
            n0 = JTBToolkit.makeNodeToken(n1);
            n3 = jj_consume_token(LSQPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
            n5 = jj_consume_token(RSQPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
            {
                if ("" != null) return new ArrayType(n0, n2, n4);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("ArrayType");
        }
    }

    final public BooleanType BooleanType() throws ParseException {
        trace_call("BooleanType");
        try {
            NodeToken n0;
            Token n1;
            n1 = jj_consume_token(BOOLEAN);
            n0 = JTBToolkit.makeNodeToken(n1);
            {
                if ("" != null) return new BooleanType(n0);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("BooleanType");
        }
    }

    final public IntegerType IntegerType() throws ParseException {
        trace_call("IntegerType");
        try {
            NodeToken n0;
            Token n1;
            n1 = jj_consume_token(INTEGER);
            n0 = JTBToolkit.makeNodeToken(n1);
            {
                if ("" != null) return new IntegerType(n0);
            }
            throw new Error("Missing return statement in function");
        } finally {
            trace_return("IntegerType");
        }
    }
